--- a/index.html
+++ b/index.html
@@ -211,17 +211,17 @@
                         <div class="col-sm-4">
                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                 <div class="flex-grow-1">
-                                    <h3 class="mb-0">Butcher</h3>
-                                    <div class="subheading mb-3">Develop in Swift and Objective-C, The Butcher app is a German based platform for food ordering, providing users with various delivery options such as Pickup, Delivery, Coollocker, SmartStore, among others.</div>
-                                    <p></p>
+                                    <h3 class="mb-0">Yaapt</h3>
+                                    <div class="subheading mb-3">Develop in Swift, Social app where used gRPC for web-services, manage socket web-services</div>
+                                    <p><a target=”_blank” href="https://apps.apple.com/in/app/yaapt/id1546957960">JRFAdda on app store <i class="fa-solid fa-up-right-from-square"></i></a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                 <div class="flex-grow-1">
-                                    <h3 class="mb-0">Yaapt</h3>
-                                    <div class="subheading mb-3">Develop in Swift, Social app where used gRPC for web-services, manage socket web-services</div>
+                                    <h3 class="mb-0">Butcher</h3>
+                                    <div class="subheading mb-3">Develop in Swift and Objective-C, The Butcher app is a German based platform for food ordering, providing users with various delivery options such as Pickup, Delivery, Coollocker, SmartStore, among others.</div>
                                     <p></p>
                                 </div>
                             </div>
