--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 <div class="flex-grow-1">
                                     <h3 class="mb-0">Yaapt</h3>
                                     <div class="subheading mb-3">Develop in Swift, Social app where used gRPC for web-services, manage socket web-services</div>
-                                    <p><a target=”_blank” href="https://apps.apple.com/in/app/yaapt/id1546957960">JRFAdda on app store <i class="fa-solid fa-up-right-from-square"></i></a></p>
+                                    <p><a target=”_blank” href="https://apps.apple.com/in/app/yaapt/id1546957960">Yaapt on app store <i class="fa-solid fa-up-right-from-square"></i></a></p>
                                 </div>
                             </div>
                         </div>
